--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,23 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <!--redis jar包start -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.6.0.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.4.2</version>
+    </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <!--redis end-->
   </dependencies>
   <build>
     <finalName>HO</finalName>
