--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,18 @@
       <version>2.9.0</version>
     </dependency>
     <!--redis end-->
+    <!--rabbitmq jar包-->
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>3.6.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit</artifactId>
+      <version>1.5.6.RELEASE</version>
+    </dependency>
+    <!--rabbitmq end-->
   </dependencies>
   <build>
     <finalName>HO</finalName>
