1.添加上传房态思路注释 2.添加熔断标志，上传补偿次数常量，rest上传房态添加对熔断标志判断 3.添加房态补偿类

--- a/src/main/resources/ota.properties
+++ b/src/main/resources/ota.properties
@@ -1,3 +1,5 @@
+#上传OTA熔断恢复时间(minute)
+ota_fusing_time=10
 #OTA酒店信息及产品上传接口url
 ota_uploadHotelInfo_url=http://124.127.242.67/AutoMappingWS/GetPmsInfo.asmx
 #OTA酒店信息及产品上传soapAction
