1.修改vo_reItem，完善字段，添加equals,hashCode方法 2.bo添加上传房态，线下产品转换成线上活动产品方法 3.dao添加根据线下产品获取线上活动方案数据 4.更改ora配置文件

--- a/src/main/resources/ota.properties
+++ b/src/main/resources/ota.properties
@@ -5,4 +5,9 @@ ota_uploadHotelInfo_url=http://124.127.242.67/AutoMappingWS/GetPmsInfo.asmx
 #OTA酒店信息及产品上传soapAction
 ota_uploadHotelInfo_soapAction=http://htng.org/2014B/HTNG_ARIAndReservationPushService#GetPMSHotelInfo
 #OTA酒店信息及产品上传命名空间
-ota_uploadHotelInfo_nameSpace=http://www.opentravel.org/OTA/2003/05
+ota_nameSpace=http://www.opentravel.org/OTA/2003/05
+#OTA房态上传接口url
+ota_uploadRoomStatus_url="http://124.127.242.67/PMSGateway/PMSGatewayService.asmx"
+#OTA房态上传命名空间xsi
+ota_nameSpace_xsi="http://www.w3.org/2001/XMLSchema-instance"
+
