--- a/src/main/resources/ota.properties
+++ b/src/main/resources/ota.properties
@@ -1,5 +1,7 @@
 #上传OTA熔断恢复时间(minute)
 ota_fusing_time=10
+#上传OTA补偿次数
+ota_equalize_num=5
 #OTA酒店信息及产品上传接口url
 ota_uploadHotelInfo_url=http://124.127.242.67/AutoMappingWS/GetPmsInfo.asmx
 #OTA酒店信息及产品上传soapAction
