--- a/src/main/resources/ota.properties
+++ b/src/main/resources/ota.properties
@@ -9,7 +9,7 @@ ota_uploadHotelInfo_soapAction=http://htng.org/2014B/HTNG_ARIAndReservationPushS
 #OTA酒店信息及产品上传命名空间
 ota_nameSpace=http://www.opentravel.org/OTA/2003/05
 #OTA房态上传接口url
-ota_uploadRoomStatus_url="http://124.127.242.67/PMSGateway/PMSGatewayService.asmx"
+ota_uploadRoomStatus_url=http://124.127.242.67/PMSGateway/PMSGatewayService.asmx
 #OTA房态上传命名空间xsi
-ota_nameSpace_xsi="http://www.w3.org/2001/XMLSchema-instance"
+ota_nameSpace_xsi=http://www.w3.org/2001/XMLSchema-instance
 
