--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>spring-test</artifactId>
       <version>4.1.7.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>4.1.7.RELEASE</version>
+    </dependency>
     <!-- jackson-databind 作用于@ResponseBody 将返回值转换成json-->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -240,11 +245,6 @@
       <version>1.2.13_2</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.axiom</groupId>
-      <artifactId>com.springsource.org.apache.axiom</artifactId>
-      <version>1.2.5</version>
-    </dependency>
-    <dependency>
       <groupId>wsdl4j</groupId>
       <artifactId>wsdl4j</artifactId>
       <version>1.6.3</version>
@@ -254,8 +254,49 @@
       <artifactId>xmlschema-core</artifactId>
       <version>2.0.2</version>
     </dependency>
-
     <!--AXIS2 end-->
+    <!-- cxf start-->
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-core</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-bindings-soap</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-transports-http-jetty</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-rs-extension-providers</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-rs-client</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-frontend-jaxws</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-ws-policy</artifactId>
+      <version>3.1.10</version>
+    </dependency>
+    <!-- cxf end -->
   </dependencies>
   <build>
     <finalName>HO</finalName>
